--- a/public/css/app.css
+++ b/public/css/app.css
@@ -87,7 +87,7 @@ p {
 .sidebar-nav li a:hover {
     text-decoration: none;
     color: #fff;
-    background: rgba(255,255,255,0.2);
+    background: rgba(255, 255, 255, 0.2);
 }
 
 .sidebar-nav li a:active,
@@ -103,13 +103,13 @@ p {
     padding: 0;
 }
 
-.active>.page-link, .page-link.active {
+.active > .page-link, .page-link.active {
     background-color: #113F7A;
     border-color: #128155;
-    color: #ffffff!important;
+    color: #ffffff !important;
 }
 
-.active>.page-link, .page-link {
+.active > .page-link, .page-link {
     color: #113F7A;
 }
 
@@ -122,7 +122,7 @@ div.dataTables_wrapper div.dataTables_length select {
     min-width: 55px;
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
     #wrapper {
         padding-left: 250px;
     }
@@ -150,8 +150,13 @@ div.dataTables_wrapper div.dataTables_length select {
     }
 }
 
+#show, #hide {
+    color: #171A1E99;
+    font-size: 18px;
+}
+
 /*=============== BREAKPOINTS ===============*/
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
 }
 
 @media screen and (max-width: 992px) {
