--- a/public/css/style.css
+++ b/public/css/style.css
@@ -249,7 +249,7 @@ button.arrow:hover {
     right: 8px;
     background-color: transparent;
     border: none;
-    color: #484A4D!important;
+    color: #484A4D !important;
 }
 
 .password_info {
@@ -264,4 +264,21 @@ button.arrow:hover {
     text-align: left;
     color: #171A1EE5;
     margin-bottom: 32px;
+}
+
+.authorize,
+.agree {
+    font-family: PT Serif, serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #171A1ECC;
+    margin-bottom: 32px;
+}
+
+.authorize a,
+.agree a {
+    color: #2672D3;
 }
