--- a/public/user-dashboard/css/style.css
+++ b/public/user-dashboard/css/style.css
@@ -4,7 +4,7 @@
     --primary-color: #171A1E;
     --secondary-color: #2672D3;
     --border: #2672D31A;
-  }
+}
 
 * {
     box-sizing: border-box;
@@ -17,22 +17,22 @@ html, body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    color: var( --primary-color);
+    color: var(--primary-color);
     background-color: #F8FAFD;
 }
 
 .no-scroll {
     overflow: hidden;
-  }
+}
 
 .scroll-x {
     overflow-x: hidden;
 }
 
 a {
-    color: var( --primary-color);
+    color: var(--primary-color);
     text-decoration: none !important;
-    transition: .5s ease; 
+    transition: .5s ease;
 }
 
 a:hover {
@@ -166,7 +166,6 @@ button.arrow:hover {
 }
 
 
-
 .main-title {
     font-family: PTSerif-Regular;
     font-size: 56px;
@@ -179,7 +178,7 @@ button.arrow:hover {
 }
 
 .secondary-title {
-   font-family: PTSerif-Regular;
+    font-family: PTSerif-Regular;
     font-size: 40px;
     line-height: 56px;
     letter-spacing: 0.02em;
@@ -205,4 +204,30 @@ button.arrow:hover {
 .paragraph a {
     text-decoration: underline !important;
     color: var(--secondary-color);
+}
+
+.edit_profile_title {
+    font-family: PT Serif, serif;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 44.8px;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #171A1E;
+}
+
+.account_form {
+    background-color: #F8FAFD;
+    border: 1px solid #2672D31A;
+    padding: 40px 25px;
+}
+
+.account_form_title {
+    font-family: PT Serif, serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25.2px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #171A1E;
 }
